# looker_table_mapper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pythonapp.yml
looker_data_mapper/: cli.py  order_items.json  table_mapper.py  users.json
tests/: test_table_mapper.py
