[tool.poetry]
name = "looker_data_mapper"
version = "0.1.0"
description = "A utility to map tables to where they are used in LookML models and Looker content"
authors = ["Colin Pistell <colinpistell@google.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
looker-sdk = "^0.1.3-beta.20"
lookml = "^2.0.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-mock = "^3.3.1"
ipython = "^7.19.0"

[tool.poetry.scripts]
mapper = "looker_data_mapper.cli:mapper"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
